package NYT.NDistributedThrottler.NProto;

////////////////////////////////////////////////////////////////////////////////

message TThrottlerUsageRate
{
    required string id = 1;
    required double usage_rate = 2;
}

message TThrottlerLimit
{
    required string id = 1;
    optional double limit = 2;
}

message TReqHeartbeat
{
    required string member_id = 1;
    repeated TThrottlerUsageRate throttlers = 2;
}

message TRspHeartbeat
{
    repeated TThrottlerLimit throttlers = 1;
}

message TReqThrottle
{
    required string throttler_id = 1;
    required int64 amount = 2;
}

message TRspThrottle
{ }

////////////////////////////////////////////////////////////////////////////////
